--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -165,5 +165,7 @@
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+
+    {%- render 'test-app-snippet' -%}
   </body>
 </html>
